--- a/css/style.css
+++ b/css/style.css
@@ -35,9 +35,12 @@ nav ul {
 /*Main*/
 body {
   font-family: var(--body-font);
+  font-size: var(--body-font-size);
 }
 h3 {
   text-align: center;
+  padding-top: 3%;
+  padding-bottom: 1%;
 }
 h4 {
   max-width: fit-content;
@@ -95,8 +98,8 @@ button {
   .moreLike {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    justify-items: center;
-    padding: 0 6%;
+    justify-content: space-around;
+    padding: 0 7.5%;
     max-width: 100%;
     gap: 1rem;
   }
