--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ header {
 header h1 span {
   font-family: var(--heavy-font);
 }
-nav ul {
+header nav ul {
   display: flex;
   list-style: none;
   gap: 1rem;
@@ -43,11 +43,26 @@ h3 {
   padding-top: 3%;
   padding-bottom: 1%;
 }
+.textImg {
+  position: relative;
+}
+.listAuthor .textImg {
+  margin: 0;
+}
 
 .textImg h4 {
-  background-color: rgba(0, 0, 0, 0.425);
-  max-width: fit-content;
   margin: 0;
+  color: var(--secondary-font-colour);
+  padding-left: 2%;
+  padding-right: 2%;
+  padding-top: 2%;
+}
+.title {
+  background-color: rgba(0, 0, 0, 0.425);
+  height: 30%;
+  width: 100%;
+  position: absolute;
+  bottom: 2%;
 }
 img {
   max-width: 100%;
@@ -68,10 +83,21 @@ img {
 .info {
   padding-left: 1%;
   padding-right: 1%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  column-gap: 3rem;
+  justify-content: space-between;
 }
+.listAuthor .info {
+  column-gap: 1rem;
+}
+
 /*Footer*/
 footer {
   text-align: center;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 /*Button*/
@@ -128,6 +154,10 @@ input {
     flex-wrap: wrap;
     justify-content: center;
     gap: 1rem;
+    max-width: 100%;
+  }
+  .sameAuthor .listAuthor {
+    max-width: 50%;
   }
   .moreLike {
     display: grid;
